<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    tools:visibility="visible"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/profile_margin_default"
        android:layout_marginEnd="@dimen/profile_margin_default"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tvName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/my_picture" />

    <TextView
        android:id="@+id/tvTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/profile_margin_default"
        android:layout_marginTop="@dimen/profile_margin_default"
        android:text="@string/track_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/tvCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/profile_margin_default"
        android:layout_marginTop="@dimen/profile_margin_default"
        android:text="@string/country_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTrackValue" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/profile_margin_default"
        android:layout_marginTop="@dimen/profile_margin_default"
        android:text="@string/email_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCountryValue" />

    <TextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/profile_margin_default"
        android:layout_marginTop="@dimen/profile_margin_default"
        android:text="@string/phone_number_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailValue" />

    <TextView
        android:id="@+id/tvSlackUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/profile_margin_default"
        android:layout_marginTop="@dimen/profile_margin_default"
        android:text="@string/slack_username_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPhoneNumberValue" />

    <TextView
        android:id="@+id/tvTrackValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/profile_margin_default"
        android:layout_marginTop="@dimen/profile_margin_default"
        android:text="@string/track_value"
        app:layout_constraintStart_toEndOf="@+id/tvTrack"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/tvCountryValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/profile_margin_default"
        android:layout_marginTop="@dimen/profile_margin_default"
        android:text="@string/country_value"
        app:layout_constraintStart_toEndOf="@+id/tvCountry"
        app:layout_constraintTop_toBottomOf="@+id/tvTrackValue" />

    <TextView
        android:id="@+id/tvEmailValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/profile_margin_default"
        android:layout_marginTop="@dimen/profile_margin_default"
        android:text="@string/email_value"
        app:layout_constraintStart_toEndOf="@+id/tvEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvCountryValue" />

    <TextView
        android:id="@+id/tvPhoneNumberValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/profile_margin_default"
        android:layout_marginTop="@dimen/profile_margin_default"
        android:text="@string/phone_number_value"
        app:layout_constraintStart_toEndOf="@+id/tvPhoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailValue" />

    <TextView
        android:id="@+id/tvSlackUserNameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/profile_margin_default"
        android:layout_marginTop="@dimen/profile_margin_default"
        android:text="@string/slack_username_value"
        app:layout_constraintStart_toEndOf="@+id/tvSlackUserName"
        app:layout_constraintTop_toBottomOf="@+id/tvPhoneNumberValue" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/profile_margin_default"
        android:layout_marginEnd="@dimen/profile_margin_default"
        android:layout_marginBottom="16dp"
        android:text="@string/name_value"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_weight"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp" />

</android.support.constraint.ConstraintLayout>